videoTube and taskList project addition

--- a/public/index.html
+++ b/public/index.html
@@ -227,11 +227,11 @@
             <div class="flex my-4">
               <i class="fa fa-arrow-right m-2 ml-0"></i>
               <div>
-                <div class="font-bold">Parkings</div>
+                <span class="font-bold">Parkings</span>
                 <a
                   href="https://github.com/choudhary8/Parkings"
-                  class="text-rose-500 hover:bg-gray-300 rounded-lg p-1"
-                  >GitHub</a
+                  class="text-blue-500 hover:bg-gray-300 rounded-md p-1"
+                  >https://github.com/choudhary8/Parkings</a
                 >
                 <div class="flex">
                   <div class="mr-2">●</div>
@@ -259,13 +259,80 @@
                 </div>
               </div>
             </div>
+            
             <div class="flex my-4">
               <i class="fa fa-arrow-right m-2 ml-0"></i>
               <div>
-                <div class="font-bold">Clock</div>
+                <span class="font-bold">Tasklist Web App</span>
+                <a
+                  href="https://github.com/choudhary8/taskList"
+                  class="text-blue-500 hover:bg-gray-300 rounded-md p-1"
+                  >https://github.com/choudhary8/taskList</a
+                >
+                <div class="flex">
+                  <div class="mr-2">●</div>
+                  <div>
+                    Developed a ”Tasklist” web application for efficiently managing tasks for the upcoming week.
+                  </div>
+                </div>
+                <div class="flex">
+                  <div class="mr-2">●</div>
+                  <div>
+                    Features include task creation, deletion, rescheduling, and sharing with others.
+                  </div>
+                </div>
+                <div class="flex">
+                  <div class="mr-2">●</div>
+                  <div>
+                    Implemented user authentication and authorization using access and refresh tokens for secure access control.
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="flex my-4">
+              <i class="fa fa-arrow-right m-2 ml-0"></i>
+              <div>
+                <span class="font-bold">VideoTube</span>
+                <a
+                  href="https://github.com/choudhary8/VideoTube"
+                  class="text-blue-500 hover:bg-gray-300 rounded-md p-1"
+                  >https://github.com/choudhary8/VideoTube</a
+                >
+                <div class="flex">
+                  <div class="mr-2">●</div>
+                  <div>
+                    Created ”VideoTube”, a replica of YouTube’s backend.
+                  </div>
+                </div>
+                <div class="flex">
+                  <div class="mr-2">●</div>
+                  <div>
+                    Enables users to upload videos, comment, tweet, and explore other user’s channels, videos, comments, and tweets.
+                  </div>
+                </div>
+                <div class="flex">
+                  <div class="mr-2">●</div>
+                  <div>
+                    Implemented robust user authentication and authorization using access and refresh tokens.
+                  </div>
+                </div>
+                <div class="flex">
+                  <div class="mr-2">●</div>
+                  <div>
+                    Leveraged MongoDB aggregation pipelines for efficient data retrieval and manipulation.
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="flex my-4">
+              <i class="fa fa-arrow-right m-2 ml-0"></i>
+              <div>
+                <span class="font-bold">Clock</span>
                 <a
                   href="https://clock-b9j0.onrender.com"
-                  class="text-rose-500 hover:bg-gray-300 rounded-lg p-1"
+                  class="text-blue-500 hover:bg-gray-300 rounded-md p-1"
                   >https://clock-b9j0.onrender.com</a
                 >
                 <div class="flex">
@@ -282,33 +349,7 @@
                 <div class="flex">
                   <div class="mr-2">●</div>
                   <div>
-                    Created using technologies like HTML, CSS, JavaScript.
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="flex my-4">
-              <i class="fa fa-arrow-right m-2 ml-0"></i>
-              <div>
-                <div class="font-bold">Shopping</div>
-                <a
-                  href="choudhary8.github.io"
-                  class="hover:bg-gray-300 rounded-lg p-1"
-                  >choudhary8.github.io</a
-                >
-                <div class="flex">
-                  <div class="mr-2">●</div>
-                  <div>
-                    Developed a "Shopping" web application for displaying items
-                    for shopping, using HTML, CSS, and implementing a
-                    user-friendly interface.
-                  </div>
-                </div>
-                <div class="flex">
-                  <div class="mr-2">●</div>
-                  <div>
-                    Conducted thorough testing, debugging, and utilized github
-                    to ensure seamless functionality.
+                    Created using technologies like HTML, CSS, tailwind, JavaScript.
                   </div>
                 </div>
               </div>
