--- a/public/index.html
+++ b/public/index.html
@@ -88,7 +88,7 @@
 
       <div
         id="content"
-        class="h-screen py-4 px-10 sm:overflow-y-scroll sm:bg-gray-900 col-span-5"
+        class="h-screen py-4 px-6 sm:px-10 sm:overflow-y-scroll sm:bg-gray-900 col-span-5"
       >
         <div id="aboutMe">
           <h1 class="text-blue-600">About Me</h1>
