bullet point style change

--- a/public/index.html
+++ b/public/index.html
@@ -245,7 +245,7 @@
                   >https://github.com/choudhary8/Parkings</a
                 >
                 <div class="flex">
-                  <div class="mr-2 mt-1 text-gray-300 text-sm">●</div>
+                  <div class="mr-2 mt-1 text-gray-300 text-xs">●</div>
                   <div>
                     Parkings is a web application for finding and listing
                     parking spaces, offering a user-friendly platform for both
@@ -253,7 +253,7 @@
                   </div>
                 </div>
                 <div class="flex">
-                  <div class="mr-2 mt-1 text-gray-300 text-sm">●</div>
+                  <div class="mr-2 mt-1 text-gray-300 text-xs">●</div>
                   <div>
                     Conceptualized and developed the 'Parkings" web app,
                     implementing essential functions such as user
@@ -262,7 +262,7 @@
                   </div>
                 </div>
                 <div class="flex">
-                  <div class="mr-2 mt-1 text-gray-300 text-sm">●</div>
+                  <div class="mr-2 mt-1 text-gray-300 text-xs">●</div>
                   <div>
                     Developed using technologies - HTML, CSS, JavaScript, VueJs,
                     NodeJs, Express, MongoDb.
@@ -282,19 +282,19 @@
                   >https://github.com/choudhary8/taskList</a
                 >
                 <div class="flex">
-                  <div class="mr-2 mt-1 text-gray-300 text-sm">●</div>
+                  <div class="mr-2 mt-1 text-gray-300 text-xs">●</div>
                   <div>
                     Developed a ”Tasklist” web application for efficiently managing tasks for the upcoming week.
                   </div>
                 </div>
                 <div class="flex">
-                  <div class="mr-2 mt-1 text-gray-300 text-sm">●</div>
+                  <div class="mr-2 mt-1 text-gray-300 text-xs">●</div>
                   <div>
                     Features include task creation, deletion, rescheduling, and sharing with others.
                   </div>
                 </div>
                 <div class="flex">
-                  <div class="mr-2 mt-1 text-gray-300 text-sm">●</div>
+                  <div class="mr-2 mt-1 text-gray-300 text-xs">●</div>
                   <div>
                     Implemented user authentication and authorization using access and refresh tokens for secure access control.
                   </div>
@@ -313,25 +313,25 @@
                   >https://github.com/choudhary8/VideoTube</a
                 >
                 <div class="flex">
-                  <div class="mr-2 mt-1 text-gray-300 text-sm">●</div>
+                  <div class="mr-2 mt-1 text-gray-300 text-xs">●</div>
                   <div>
                     Created ”VideoTube”, a replica of YouTube’s backend.
                   </div>
                 </div>
                 <div class="flex">
-                  <div class="mr-2 mt-1 text-gray-300 text-sm">●</div>
+                  <div class="mr-2 mt-1 text-gray-300 text-xs">●</div>
                   <div>
                     Enables users to upload videos, comment, tweet, and explore other user’s channels, videos, comments, and tweets.
                   </div>
                 </div>
                 <div class="flex">
-                  <div class="mr-2 mt-1 text-gray-300 text-sm">●</div>
+                  <div class="mr-2 mt-1 text-gray-300 text-xs">●</div>
                   <div>
                     Implemented robust user authentication and authorization using access and refresh tokens.
                   </div>
                 </div>
                 <div class="flex">
-                  <div class="mr-2 mt-1 text-gray-300 text-sm">●</div>
+                  <div class="mr-2 mt-1 text-gray-300 text-xs">●</div>
                   <div>
                     Leveraged MongoDB aggregation pipelines for efficient data retrieval and manipulation.
                   </div>
@@ -350,11 +350,11 @@
                   >https://allen-clone-five.vercel.app/</a
                 >
                 <div class="flex">
-                  <div class="mr-2 mt-1 text-gray-300 text-sm">●</div>
+                  <div class="mr-2 mt-1 text-gray-300 text-xs">●</div>
                   <div>A frontend clone of Allen</div>
                 </div>
                 <div class="flex">
-                  <div class="mr-2 mt-1 text-gray-300 text-sm">●</div>
+                  <div class="mr-2 mt-1 text-gray-300 text-xs">●</div>
                   <div>
                     Created using technologies like HTML, CSS, tailwind, JavaScript, ReactJs.
                   </div>
@@ -373,11 +373,11 @@
                   >https://github.com/choudhary8/chat-app</a
                 >
                 <div class="flex">
-                  <div class="mr-2 mt-1 text-gray-300 text-sm">●</div>
+                  <div class="mr-2 mt-1 text-gray-300 text-xs">●</div>
                   <div>A web for real time communication within a room and also can join & create room.</div>
                 </div>
                 <div class="flex">
-                  <div class="mr-2 mt-1 text-gray-300 text-sm">●</div>
+                  <div class="mr-2 mt-1 text-gray-300 text-xs">●</div>
                   <div>
                     Technologies :- <span class="text-bold"> HTML, CSS, tailwind, TypeScript, ReactJs, Web Scokets, Context Api </span>.
                   </div>
@@ -396,11 +396,11 @@
                   >https://ind-swift.vercel.app/</a
                 >
                 <div class="flex">
-                  <div class="mr-2 mt-1 text-gray-300 text-sm">●</div>
+                  <div class="mr-2 mt-1 text-gray-300 text-xs">●</div>
                   <div>A web for a medical client.</div>
                 </div>
                 <div class="flex">
-                  <div class="mr-2 mt-1 text-gray-300 text-sm">●</div>
+                  <div class="mr-2 mt-1 text-gray-300 text-xs">●</div>
                   <div>
                     Technologies :- <span class="text-bold"> HTML, CSS, tailwind, TypeScript, ReactJs</span>.
                   </div>
@@ -419,18 +419,18 @@
                   >https://clock-b9j0.onrender.com</a
                 >
                 <div class="flex">
-                  <div class="mr-2 mt-1 text-gray-300 text-sm">●</div>
+                  <div class="mr-2 mt-1 text-gray-300 text-xs">●</div>
                   <div>Clock is a website to check time in an analog clock</div>
                 </div>
                 <div class="flex">
-                  <div class="mr-2 mt-1 text-gray-300 text-sm">●</div>
+                  <div class="mr-2 mt-1 text-gray-300 text-xs">●</div>
                   <div>
                     Developed and hosted a website which shows live time in
                     analog format.
                   </div>
                 </div>
                 <div class="flex">
-                  <div class="mr-2 mt-1 text-gray-300 text-sm">●</div>
+                  <div class="mr-2 mt-1 text-gray-300 text-xs">●</div>
                   <div>
                     Created using technologies like HTML, CSS, tailwind, JavaScript.
                   </div>
@@ -451,7 +451,7 @@
                 <div>Digital Technology Manager</div>
                 <div>September 2022 - Present</div>
                 <div class="flex">
-                  <div class="mr-2 mt-1 text-gray-300 text-sm">●</div>
+                  <div class="mr-2 mt-1 text-gray-300 text-xs">●</div>
                   <div>
                     Implemented a comprehensive digital transformation strategy,
                     resulting in a 20% increase in online sales within the first
@@ -459,14 +459,14 @@
                   </div>
                 </div>
                 <div class="flex">
-                  <div class="mr-2 mt-1 text-gray-300 text-sm">●</div>
+                  <div class="mr-2 mt-1 text-gray-300 text-xs">●</div>
                   <div>
                     Oversaw the development and launch of a new website, leading
                     to a 30% increase in user engagement and retention.
                   </div>
                 </div>
                 <div class="flex">
-                  <div class="mr-2 mt-1 text-gray-300 text-sm">●</div>
+                  <div class="mr-2 mt-1 text-gray-300 text-xs">●</div>
                   <div>
                     Managed a team of 15 developers, designers, and analysts to
                     successfully launch a new website, improving overall site
@@ -474,7 +474,7 @@
                   </div>
                 </div>
                 <div class="flex">
-                  <div class="mr-2 mt-1 text-gray-300 text-sm">●</div>
+                  <div class="mr-2 mt-1 text-gray-300 text-xs">●</div>
                   <div>
                     Spearheaded the integration of new CRM software,
                     streamlining customer communication processes and increasing
@@ -492,7 +492,7 @@
                 <div>Full Stack Developer Trainee</div>
                 <div>August 2021 - October 2021</div>
                 <div class="flex">
-                  <div class="mr-2 mt-1 text-gray-300 text-sm">●</div>
+                  <div class="mr-2 mt-1 text-gray-300 text-xs">●</div>
                   <div>
                     Designed and developed visually appealing and interactive
                     front-end components using HTML, CSS, JavaScript, Vue.js,
@@ -500,7 +500,7 @@
                   </div>
                 </div>
                 <div class="flex">
-                  <div class="mr-2 mt-1 text-gray-300 text-sm">●</div>
+                  <div class="mr-2 mt-1 text-gray-300 text-xs">●</div>
                   <div>
                     Utilized Node.js and Express framework for efficient
                     back-end development, ensuring seamless data storage and
@@ -508,7 +508,7 @@
                   </div>
                 </div>
                 <div class="flex">
-                  <div class="mr-2 mt-1 text-gray-300 text-sm">●</div>
+                  <div class="mr-2 mt-1 text-gray-300 text-xs">●</div>
                   <div>Used git to maintain my work.</div>
                 </div>
               </div>
@@ -520,35 +520,35 @@
                 <div>Co-Founder</div>
                 <div>May 2021 - June 2021</div>
                 <div class="flex">
-                  <div class="mr-2 mt-1 text-gray-300 text-sm">●</div>
+                  <div class="mr-2 mt-1 text-gray-300 text-xs">●</div>
                   <div>
                     Co-founded and launched Sabajivala, an online platform for
                     direct ordering of fresh produce from farms.
                   </div>
                 </div>
                 <div class="flex">
-                  <div class="mr-2 mt-1 text-gray-300 text-sm">●</div>
+                  <div class="mr-2 mt-1 text-gray-300 text-xs">●</div>
                   <div>
                     Implemented a mobile app and also utilized WhatsApp and
                     phone calls to facilitate customer orders.
                   </div>
                 </div>
                 <div class="flex">
-                  <div class="mr-2 mt-1 text-gray-300 text-sm">●</div>
+                  <div class="mr-2 mt-1 text-gray-300 text-xs">●</div>
                   <div>
                     Established strong relationships with local farmers to
                     ensure a consistent supply of fresh fruits and vegetables.
                   </div>
                 </div>
                 <div class="flex">
-                  <div class="mr-2 mt-1 text-gray-300 text-sm">●</div>
+                  <div class="mr-2 mt-1 text-gray-300 text-xs">●</div>
                   <div>
                     Efficiently managed logistics using electric three-wheelers
                     for timely and eco-friendly deliveries.
                   </div>
                 </div>
                 <div class="flex">
-                  <div class="mr-2 mt-1 text-gray-300 text-sm">●</div>
+                  <div class="mr-2 mt-1 text-gray-300 text-xs">●</div>
                   <div>
                     Conducted market research to optimize product offerings and
                     gained valuable experience in entrepreneurship, customer
