--- a/public/index.html
+++ b/public/index.html
@@ -61,11 +61,11 @@
     class="w-2/3 p-10 pt-1 overflow-y-scroll h-full bg-white rounded-lg fixed right-0" -->
     <div class="grid grid-cols-1 sm:grid-cols-8 gap-0">
       <div
-        class="sm:h-screen  sm:rounded-lg p-4 col-span-3 justify-center"
+        class="sm:h-screen  sm:rounded-lg p-4 sm:py-8 col-span-3 flex flex-col items-center"
       >
-        <img src="./photo.png" alt="" class="w-full h-4/5 rounded-lg" />
-        <div class="m-2 w-full flex justify-center font-bold">Manoj Kumar</div>
-        <div class="m-2 w-full flex justify-center">Programmer | Web developer</div>
+        <img src="./photo.png" alt="" class="p-2 h-4/5 rounded-lg" />
+        <div class="m-1 w-full flex justify-center text-2xl font-bold">Manoj Kumar</div>
+        <div class="m-1 w-full flex justify-center">Programmer | Web developer</div>
         <!-- <div class="mb-4" style="height: 22px;">
                 <h4 class="typed-text-output d-inline-block text-body">Front</h4><span class="typed-cursor">|</span>
                 <div class="typed-text d-none">Web Designer, Web Developer, Front End Developer, Apps Designer, Apps Developer</div>
@@ -77,7 +77,7 @@
             target="_blank"
             >Resume/CV</a
           >
-          <span class="py-2">|</span>
+          <span class="text-3xl py-1">|</span>
           <a
             href="#contact"
             class="p-2 shadow-lg rounded-lg bg-blue-800 hover:bg-blue-900"
@@ -88,7 +88,7 @@
 
       <div
         id="content"
-        class="h-screen py-4 px-6 sm:px-10 sm:overflow-y-scroll sm:bg-gray-900 col-span-5"
+        class="h-screen py-6 px-6 sm:px-10 sm:overflow-y-scroll sm:bg-gray-900 col-span-5"
       >
         <div id="aboutMe">
           <h1 class="text-blue-600">About Me</h1>
@@ -106,19 +106,19 @@
           </div>
           <div class="grid sm:grid-cols-2 my-2">
             <div>
-              <span class="font-bold">Name: </span>
+              <span class="font-bold">Name : </span>
               <span>Manoj Kumar</span>
             </div>
             <div>
-              <span class="font-bold">Degree:</span>
+              <span class="font-bold">Degree :</span>
               <span>B.Tech</span>
             </div>
             <div>
-              <span class="font-bold">Phone:</span>
+              <span class="font-bold">Mob No. :</span>
               <span>9602964298</span>
             </div>
             <div >
-              <span class="font-bold">Email:</span>
+              <span class="font-bold">Email :</span>
               <span>manojbhichchhar8@gmail.com</span>
             </div>
           </div>
