--- a/public/index.html
+++ b/public/index.html
@@ -63,7 +63,7 @@
       <div
         class="sm:h-screen  sm:rounded-lg p-4 sm:py-8 col-span-3 flex flex-col items-center"
       >
-        <img src="./photo.png" alt="" class="p-2 h-4/5 rounded-lg" />
+        <img src="./photo.png" alt="" class="p-2 sm:h-4/5 rounded-lg" />
         <div class="m-1 w-full flex justify-center text-2xl font-bold">Manoj Kumar</div>
         <div class="m-1 w-full flex justify-center">Programmer | Web developer</div>
         <!-- <div class="mb-4" style="height: 22px;">
