--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Manoj Kumar</title>
     <link href="../src/assets/css/index.css" />
-    <link
+    <!-- <link
       href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css"
       rel="stylesheet"
-    />
+    /> -->
+    <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
     <style>
       h1 {
         font-weight: 700;
@@ -22,49 +23,53 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
   </head>
-  <body class="bg-black text-gray-300 relative z-0">
-    <!--  <nav class="absolute z-10 right-0 top-20 w-1/10 h-2/3">
-      <ul class="h-full flex flex-col justify-around my-10">
-        <li class="rounded-full bg-green-500">
-          <a class="inline m-4" href="#">
-            <span>Home</span>
+  <body class="bg-black text-gray-300 relative">
+     <nav class="fixed right-4 top-20 h-2/3 hidden sm:block">
+      <ul class="h-full flex flex-col justify-center items-end text-lg">
+        <li class="group rounded-full p-2 my-4 bg-gray-600 hover:bg-blue-800 shadow-sm shadow-blue-500">
+          <a class="m-2" href="#aboutMe">
+            <span class="hidden group-hover:inline p-2">Home</span>
             <i class="fa fa-home"></i>
           </a>
         </li>
-        <li>
-          <a class="inline m-4" href="#">
+        <li class="group rounded-full p-2 my-4 bg-gray-600 hover:bg-blue-800 shadow-sm shadow-blue-500">
+          <a class="m-2" href="#experience">
+            <span class="hidden group-hover:inline p-2">Experience</span>
+            <!-- Experience -->
             <i class="fa fa-user"></i>
-            Experience
           </a>
         </li>
-        <li>
-          <a class="inline m-4" href="#">
+        <li class="group rounded-full p-2 my-4 bg-gray-600 hover:bg-blue-800 shadow-sm shadow-blue-500">
+          <a class="m-2" href="#projects">
+            <span class="hidden group-hover:inline p-2">Projects</span>
+            <!-- Projects -->
             <i class="fa fa-briefcase"></i>
-            Projects
           </a>
         </li>
-        <li>
-          <a class="inline m-4" href="#">
+        <li class="group rounded-full p-2 my-4 bg-gray-600 hover:bg-blue-800 shadow-sm shadow-blue-500">
+          <a class="m-2" href="#skills">
+            <span class="hidden group-hover:inline p-2">Skills</span>
+            <!-- Skills -->
             <i class="fa fa-code"></i>
-            Skills
           </a>
         </li>
-        <li>
-          <a class="inline m-4" href="#">
+        <li class="group rounded-full p-2 my-4 bg-gray-600 hover:bg-blue-800 shadow-sm shadow-blue-500">
+          <a class="m-2" href="#contect">
+            <span class="hidden group-hover:inline p-2">Contact</span>
+            <!-- Contact me  -->
             <i class="fa fa-envelope"></i>
-            Contact me
           </a>
         </li>
       </ul>
-    </nav> -->
+    </nav>
     <!-- class="w-1/3 py-5 px-1 h-screen pt-1 bg-gray-200 rounded-lg fixed left-0"
     class="w-2/3 p-10 pt-1 overflow-y-scroll h-full bg-white rounded-lg fixed right-0" -->
     <div class="grid grid-cols-1 sm:grid-cols-8 gap-0">
       <div
         class="sm:h-screen  sm:rounded-lg p-4 sm:py-8 col-span-3 flex flex-col items-center"
       >
-        <img src="./photo.png" alt="" class="p-2 sm:h-4/5 rounded-lg" />
-        <div class="m-1 w-full flex justify-center text-2xl font-bold">Manoj Kumar</div>
+        <img src="./photo.png" alt="" class="p-2 sm:h-4/5 rounded-lg sm:shadow-sm shadow-blue-500" />
+        <div class="m-1 mt-4 w-full flex justify-center text-2xl font-bold">Manoj Kumar</div>
         <div class="m-1 w-full flex justify-center">Programmer | Web developer</div>
         <!-- <div class="mb-4" style="height: 22px;">
                 <h4 class="typed-text-output d-inline-block text-body">Front</h4><span class="typed-cursor">|</span>
@@ -73,14 +78,14 @@
         <div class="m-2 w-full flex justify-center">
           <a
             href="https://drive.google.com/file/d/1_dN_CoonTyFpBqyX1_YYjDQhmSAfN_83/view?usp=drive_link"
-            class="p-2 rounded-lg shadow-lg bg-blue-800 hover:bg-blue-900"
+            class="p-2 rounded-lg shadow-lg bg-blue-800 hover:bg-blue-900 shadow-sm shadow-blue-500"
             target="_blank"
             >Resume/CV</a
           >
           <span class="text-3xl py-1">|</span>
           <a
             href="#contact"
-            class="p-2 shadow-lg rounded-lg bg-blue-800 hover:bg-blue-900"
+            class="p-2 shadow-lg rounded-lg bg-blue-800 hover:bg-blue-900 shadow-sm shadow-blue-500"
             >Contact Me</a
           >
         </div>
@@ -134,7 +139,7 @@
                 <span>80%</span>
               </div>
               <div class="h-1.5 bg-gray-200 rounded-sm">
-                <div class="w-4/5 sm:bg-black bg-gray-800 h-1.5 rounded-sm"></div>
+                <div class="w-[80%] sm:bg-black bg-gray-800 h-1.5 rounded-sm"></div>
               </div>
             </div>
             <div class="w-full sm:w-1/2 p-4 pl-0">
@@ -143,7 +148,7 @@
                 <span>70%</span>
               </div>
               <div class="h-1.5 bg-gray-200 rounded-sm">
-                <div class="w-3/4 sm:bg-black bg-gray-800 h-1.5 rounded-sm"></div>
+                <div class="w-[70%] sm:bg-black bg-gray-800 h-1.5 rounded-sm"></div>
               </div>
             </div>
             <div class="w-full sm:w-1/2 p-4 pl-0">
@@ -152,7 +157,7 @@
                 <span>70%</span>
               </div>
               <div class="h-1.5 bg-gray-200 rounded-sm">
-                <div class="w-3/4 sm:bg-black bg-gray-800 h-1.5 rounded-sm"></div>
+                <div class="w-[70%] sm:bg-black bg-gray-800 h-1.5 rounded-sm"></div>
               </div>
             </div>
             <div class="w-full sm:w-1/2 p-4 pl-0">
@@ -161,7 +166,7 @@
                 <span>70%</span>
               </div>
               <div class="h-1.5 bg-gray-200 rounded-sm">
-                <div class="w-3/4 sm:bg-black bg-gray-800 h-1.5 rounded-sm"></div>
+                <div class="w-[70%] sm:bg-black bg-gray-800 h-1.5 rounded-sm"></div>
               </div>
             </div>
             <div class="w-full sm:w-1/2 p-4 pl-0">
@@ -170,7 +175,7 @@
                 <span>60%</span>
               </div>
               <div class="h-1.5 bg-gray-200 rounded-sm">
-                <div class="w-3/5 sm:bg-black bg-gray-800 h-1.5 rounded-sm"></div>
+                <div class="w-[60%] sm:bg-black bg-gray-800 h-1.5 rounded-sm"></div>
               </div>
             </div>
             <div class="w-full sm:w-1/2 p-4 pl-0">
@@ -179,7 +184,7 @@
                 <span>70%</span>
               </div>
               <div class="h-1.5 bg-gray-200 rounded-sm">
-                <div class="w-3/4 sm:bg-black bg-gray-800 h-1.5 rounded-sm"></div>
+                <div class="w-[70%] sm:bg-black bg-gray-800 h-1.5 rounded-sm"></div>
               </div>
             </div>
             <div class="w-full sm:w-1/2 p-4 pl-0">
@@ -188,7 +193,7 @@
                 <span>70%</span>
               </div>
               <div class="h-1.5 bg-gray-200 rounded-sm">
-                <div class="w-3/4 sm:bg-black bg-gray-800 h-1.5 rounded-sm"></div>
+                <div class="w-[70%] sm:bg-black bg-gray-800 h-1.5 rounded-sm"></div>
               </div>
             </div>
             <div class="w-full sm:w-1/2 p-4 pl-0">
@@ -197,7 +202,7 @@
                 <span>70%</span>
               </div>
               <div class="h-1.5 bg-gray-200 rounded-sm">
-                <div class="w-3/4 sm:bg-black bg-gray-800 h-1.5 rounded-sm"></div>
+                <div class="w-[70%] sm:bg-black bg-gray-800 h-1.5 rounded-sm"></div>
               </div>
             </div>
           </div>
@@ -579,24 +584,24 @@
               name="name"
               placeholder="Your Name"
               required
-              class="border border-black rounded-lg p-2 block my-4 w-5/6 sm:w-2/5 shadow-lg"
+              class="border-b border-gray-700 p-2 block my-4 w-5/6 sm:w-2/5 shadow-lg"
             />
             <input
               type="text"
               name="email"
               placeholder="Your Email"
               required
-              class="border border-black rounded-lg p-2 block my-4 w-5/6 sm:w-2/5 shadow-lg"
+              class="border-b border-gray-700 p-2 block my-4 w-5/6 sm:w-2/5 shadow-lg"
             />
             <textarea
               name="message"
               placeholder="Your Message"
               required
-              class="border border-black rounded-lg p-2 block my-4 w-5/6 sm:w-2/5 shadow-lg"
+              class="border-b border-gray-700 p-2 block my-4 w-5/6 sm:w-2/5 shadow-lg"
             ></textarea>
             <button
               type="submit"
-              class="p-2 rounded-lg bg-blue-800 hover:bg-blue-900 shadow-lg shadow-green-500"
+              class="p-2 rounded-lg bg-blue-800 hover:bg-blue-900 shadow-sm shadow-blue-500"
             >
               Send Message
             </button>
@@ -604,5 +609,7 @@
         </div>
       </div>
     </div>
+
+
   </body>
 </html>
