nav bg color change

--- a/public/index.html
+++ b/public/index.html
@@ -26,34 +26,34 @@
   <body class="bg-black text-gray-300 relative">
      <nav class="fixed right-4 top-20 h-2/3 hidden sm:block">
       <ul class="h-full flex flex-col justify-center items-end text-lg">
-        <li class="group rounded-full p-2 my-4 bg-gray-600 hover:bg-blue-800 shadow-sm shadow-blue-500">
+        <li class="group rounded-full p-2 my-4 bg-blue-600 hover:bg-blue-800 shadow-sm shadow-blue-500">
           <a class="m-2" href="#aboutMe">
             <span class="hidden group-hover:inline p-2">Home</span>
             <i class="fa fa-home"></i>
           </a>
         </li>
-        <li class="group rounded-full p-2 my-4 bg-gray-600 hover:bg-blue-800 shadow-sm shadow-blue-500">
+        <li class="group rounded-full p-2 my-4 bg-blue-600 hover:bg-blue-800 shadow-sm shadow-blue-500">
           <a class="m-2" href="#experience">
             <span class="hidden group-hover:inline p-2">Experience</span>
             <!-- Experience -->
             <i class="fa fa-user"></i>
           </a>
         </li>
-        <li class="group rounded-full p-2 my-4 bg-gray-600 hover:bg-blue-800 shadow-sm shadow-blue-500">
+        <li class="group rounded-full p-2 my-4 bg-blue-600 hover:bg-blue-800 shadow-sm shadow-blue-500">
           <a class="m-2" href="#projects">
             <span class="hidden group-hover:inline p-2">Projects</span>
             <!-- Projects -->
             <i class="fa fa-briefcase"></i>
           </a>
         </li>
-        <li class="group rounded-full p-2 my-4 bg-gray-600 hover:bg-blue-800 shadow-sm shadow-blue-500">
+        <li class="group rounded-full p-2 my-4 bg-blue-600 hover:bg-blue-800 shadow-sm shadow-blue-500">
           <a class="m-2" href="#skills">
             <span class="hidden group-hover:inline p-2">Skills</span>
             <!-- Skills -->
             <i class="fa fa-code"></i>
           </a>
         </li>
-        <li class="group rounded-full p-2 my-4 bg-gray-600 hover:bg-blue-800 shadow-sm shadow-blue-500">
+        <li class="group rounded-full p-2 my-4 bg-blue-600 hover:bg-blue-800 shadow-sm shadow-blue-500">
           <a class="m-2" href="#contect">
             <span class="hidden group-hover:inline p-2">Contact</span>
             <!-- Contact me  -->
