nav link correction

--- a/public/index.html
+++ b/public/index.html
@@ -54,7 +54,7 @@
           </a>
         </li>
         <li class="group rounded-full p-2 my-4 bg-blue-600 hover:bg-blue-800 shadow-sm shadow-blue-500">
-          <a class="m-2" href="#contect">
+          <a class="m-2" href="#contact">
             <span class="hidden group-hover:inline p-2">Contact</span>
             <!-- Contact me  -->
             <i class="fa fa-envelope"></i>
