--- a/public/index.html
+++ b/public/index.html
@@ -235,10 +235,179 @@
           </div>
         </div>
 
+        <div id="experience" class="my-16">
+          <h1 class="text-blue-600">Experience</h1>
+          <hr class="w-16 h-0.5 bg-black" />
+          <div class="m-2 border-l-2 border-blue-500">
+            <div class="flex my-4">
+              <i class="fa fa-arrow-right m-2 ml-0 text-blue-500"></i>
+              <div>
+                <div class="font-bold text-xl ">ICICI Bank</div>
+                <div>IT Analyst</div>
+                <div>September 2022 - Present</div>
+                <div class="flex">
+                  <div class="mr-2 mt-1 text-gray-300 text-xs">●</div>
+                  <div>
+                    Built and maintained features for core banking application using the MERN stack.
+                  </div>
+                </div>
+                <div class="flex">
+                  <div class="mr-2 mt-1 text-gray-300 text-xs">●</div>
+                  <div>
+                    Identified and fixed production bugs by reviewing logs and application behavior.
+                  </div>
+                </div>
+                <div class="flex">
+                  <div class="mr-2 mt-1 text-gray-300 text-xs">●</div>
+                  <div>
+                    Collaborated with API Gateway and development teams to track and deliver tasks.
+                  </div>
+                </div>
+                <div class="flex">
+                  <div class="mr-2 mt-1 text-gray-300 text-xs">●</div>
+                  <div>
+                    Oversaw deliverables from a 7-member vendor team, ensuring quality and timelines.
+                  </div>
+                </div>
+                <div class="flex">
+                  <div class="mr-2 mt-1 text-gray-300 text-xs">●</div>
+                  <div>
+                    Collaborated on launching a new banking site, which saw a 30% increase in usage after release.
+                  </div>
+                </div>
+                <div class="flex">
+                  <div class="mr-2 mt-1 text-gray-300 text-xs">●</div>
+                  <div>
+                    Set up a CRM integration to reduce manual communication and improve follow-ups.
+                  </div>
+                </div>
+                <div class="flex">
+                  <div class="mr-2 mt-1 text-gray-300 text-xs">●</div>
+                  <div>
+                    <span class="text-blue-500">Technologies:</span> HTML, CSS, JavaScript, ReactJs, NodeJs, Express, MySQL
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="flex my-4">
+              <i class="fa fa-arrow-right m-2 ml-0 text-blue-500"></i>
+              <div>
+                <div class="font-bold">
+                  Fynd (Shopsense Retail Technologies Pvt. Ltd.)
+                </div>
+                <div>Full Stack Developer Trainee</div>
+                <div>August 2021 - October 2021</div>
+                <div class="flex">
+                  <div class="mr-2 mt-1 text-gray-300 text-xs">●</div>
+                  <div>
+                    Developed responsive UI components using Vue.js and Vuex to enhance UX for e-commerce clients.
+                  </div>
+                </div>
+                <div class="flex">
+                  <div class="mr-2 mt-1 text-gray-300 text-xs">●</div>
+                  <div>
+                    Built REST APIs using Node.js and Express; implemented secure MongoDB operations for data storage and retrieval.
+                  </div>
+                </div>
+                <div class="flex">
+                  <div class="mr-2 mt-1 text-gray-300 text-xs">●</div>
+                  <div>Used Git feature-branch workflows to ensure clean commits and smooth collaboration.</div>
+                </div>
+                <div class="flex">
+                  <div class="mr-2 mt-1 text-gray-300 text-xs">●</div>
+                  <div><span class="text-blue-500">Technologies:</span> HTML, CSS, JavaScript, VueJs, NodeJs, Express, MongoDB, Git</div>
+                </div>
+              </div>
+            </div>
+            <div class="flex my-4">
+              <i class="fa fa-arrow-right m-2 ml-0 text-blue-500"></i>
+              <div>
+                <div class="font-bold">Sabajivala</div>
+                <div>Co-Founder</div>
+                <div>May 2021 - June 2021</div>
+                <div class="flex">
+                  <div class="mr-2 mt-1 text-gray-300 text-xs">●</div>
+                  <div>
+                    Co-founded and launched Sabajivala, an online platform for
+                    direct ordering of fresh produce from farms.
+                  </div>
+                </div>
+                <div class="flex">
+                  <div class="mr-2 mt-1 text-gray-300 text-xs">●</div>
+                  <div>
+                    Implemented a mobile app and also utilized WhatsApp and
+                    phone calls to facilitate customer orders.
+                  </div>
+                </div>
+                <div class="flex">
+                  <div class="mr-2 mt-1 text-gray-300 text-xs">●</div>
+                  <div>
+                    Established strong relationships with local farmers to
+                    ensure a consistent supply of fresh fruits and vegetables.
+                  </div>
+                </div>
+                <div class="flex">
+                  <div class="mr-2 mt-1 text-gray-300 text-xs">●</div>
+                  <div>
+                    Efficiently managed logistics using electric three-wheelers
+                    for timely and eco-friendly deliveries.
+                  </div>
+                </div>
+                <div class="flex">
+                  <div class="mr-2 mt-1 text-gray-300 text-xs">●</div>
+                  <div>
+                    Conducted market research to optimize product offerings and
+                    gained valuable experience in entrepreneurship, customer
+                    service, and supply chain management within a start-up
+                    environment.
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
         <div id="projects" class="my-16">
           <h1 class="text-blue-600">Projects</h1>
           <hr class="w-16 h-0.5 bg-black" />
           <div class="m-2 border-l-2 border-blue-500">
+            <div class="flex my-4">
+              <i class="fa fa-arrow-right m-2 ml-0 text-blue-500"></i>
+              <div>
+                <span class="font-bold">CourseHub</span>
+                <a
+                  href="https://github.com/choudhary8/course-selling-website"
+                  class="text-blue-500 hover:underline p-1"
+                  target="_blank"
+                  >https://github.com/choudhary8/course-selling-website</a
+                >
+                <div class="flex">
+                  <div class="mr-2 mt-1 text-gray-300 text-xs">●</div>
+                  <div>
+                    CourseHub is a web application for finding and listing
+                    corses, offering a user-friendly platform for both
+                    seekers and course creators.
+                  </div>
+                </div>
+                <div class="flex">
+                  <div class="mr-2 mt-1 text-gray-300 text-xs">●</div>
+                  <div>
+                    Conceptualized and developed the "CourseHub" web app,
+                    implementing essential functions such as video streamiing, file upload, user
+                    authentication, search capability, and authorization
+                    features.
+                  </div>
+                </div>
+                <div class="flex">
+                  <div class="mr-2 mt-1 text-gray-300 text-xs">●</div>
+                  <div>
+                    Developed using technologies - HTML, CSS, TypeScript, ReactJs,
+                    NodeJs, Express, MongoDb, Multer, Ffmpeg, Cloudinary.
+                  </div>
+                </div>
+              </div>
+            </div>
+
             <div class="flex my-4">
               <i class="fa fa-arrow-right m-2 ml-0 text-blue-500"></i>
               <div>
@@ -302,6 +471,37 @@
                   <div class="mr-2 mt-1 text-gray-300 text-xs">●</div>
                   <div>
                     Implemented user authentication and authorization using access and refresh tokens for secure access control.
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="flex my-4">
+              <i class="fa fa-arrow-right m-2 ml-0 text-blue-500"></i>
+              <div>
+                <span class="font-bold">Leadform-v2</span>
+                <a
+                  href="https://leadform-v2.vercel.app/"
+                  class="text-blue-500 hover:underline p-1"
+                  target="_blank"
+                  >https://leadform-v2.vercel.app/</a
+                >
+                <div class="flex">
+                  <div class="mr-2 mt-1 text-gray-300 text-xs">●</div>
+                  <div>
+                    Developed the frontend for lead capture web.
+                  </div>
+                </div>
+                <div class="flex">
+                  <div class="mr-2 mt-1 text-gray-300 text-xs">●</div>
+                  <div>
+                    Built using React, TypeScript, and Tailwind CSS, focusing on responsive design and streamlined data flow.
+                  </div>
+                </div>
+                <div class="flex">
+                  <div class="mr-2 mt-1 text-gray-300 text-xs">●</div>
+                  <div>
+                    Implemented OTP generation and verification functionality.
                   </div>
                 </div>
               </div>
@@ -438,127 +638,6 @@
                   <div class="mr-2 mt-1 text-gray-300 text-xs">●</div>
                   <div>
                     Created using technologies like HTML, CSS, tailwind, JavaScript.
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div id="experience" class="my-16">
-          <h1 class="text-blue-600">Experience</h1>
-          <hr class="w-16 h-0.5 bg-black" />
-          <div class="m-2 border-l-2 border-blue-500">
-            <div class="flex my-4">
-              <i class="fa fa-arrow-right m-2 ml-0 text-blue-500"></i>
-              <div>
-                <div class="font-bold text-xl ">ICICI Bank</div>
-                <div>Digital Technology Manager</div>
-                <div>September 2022 - Present</div>
-                <div class="flex">
-                  <div class="mr-2 mt-1 text-gray-300 text-xs">●</div>
-                  <div>
-                    Implemented a comprehensive digital transformation strategy,
-                    resulting in a 20% increase in online sales within the first
-                    year.
-                  </div>
-                </div>
-                <div class="flex">
-                  <div class="mr-2 mt-1 text-gray-300 text-xs">●</div>
-                  <div>
-                    Oversaw the development and launch of a new website, leading
-                    to a 30% increase in user engagement and retention.
-                  </div>
-                </div>
-                <div class="flex">
-                  <div class="mr-2 mt-1 text-gray-300 text-xs">●</div>
-                  <div>
-                    Managed a team of 15 developers, designers, and analysts to
-                    successfully launch a new website, improving overall site
-                    performance and user experience.
-                  </div>
-                </div>
-                <div class="flex">
-                  <div class="mr-2 mt-1 text-gray-300 text-xs">●</div>
-                  <div>
-                    Spearheaded the integration of new CRM software,
-                    streamlining customer communication processes and increasing
-                    customer satisfaction ratings by 15%.
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="flex my-4">
-              <i class="fa fa-arrow-right m-2 ml-0 text-blue-500"></i>
-              <div>
-                <div class="font-bold">
-                  Fynd (Shopsense Retail Technologies Pvt. Ltd.)
-                </div>
-                <div>Full Stack Developer Trainee</div>
-                <div>August 2021 - October 2021</div>
-                <div class="flex">
-                  <div class="mr-2 mt-1 text-gray-300 text-xs">●</div>
-                  <div>
-                    Designed and developed visually appealing and interactive
-                    front-end components using HTML, CSS, JavaScript, Vue.js,
-                    and Vuex framework.
-                  </div>
-                </div>
-                <div class="flex">
-                  <div class="mr-2 mt-1 text-gray-300 text-xs">●</div>
-                  <div>
-                    Utilized Node.js and Express framework for efficient
-                    back-end development, ensuring seamless data storage and
-                    retrieval with MongoDB.
-                  </div>
-                </div>
-                <div class="flex">
-                  <div class="mr-2 mt-1 text-gray-300 text-xs">●</div>
-                  <div>Used git to maintain my work.</div>
-                </div>
-              </div>
-            </div>
-            <div class="flex my-4">
-              <i class="fa fa-arrow-right m-2 ml-0 text-blue-500"></i>
-              <div>
-                <div class="font-bold">Sabajivala</div>
-                <div>Co-Founder</div>
-                <div>May 2021 - June 2021</div>
-                <div class="flex">
-                  <div class="mr-2 mt-1 text-gray-300 text-xs">●</div>
-                  <div>
-                    Co-founded and launched Sabajivala, an online platform for
-                    direct ordering of fresh produce from farms.
-                  </div>
-                </div>
-                <div class="flex">
-                  <div class="mr-2 mt-1 text-gray-300 text-xs">●</div>
-                  <div>
-                    Implemented a mobile app and also utilized WhatsApp and
-                    phone calls to facilitate customer orders.
-                  </div>
-                </div>
-                <div class="flex">
-                  <div class="mr-2 mt-1 text-gray-300 text-xs">●</div>
-                  <div>
-                    Established strong relationships with local farmers to
-                    ensure a consistent supply of fresh fruits and vegetables.
-                  </div>
-                </div>
-                <div class="flex">
-                  <div class="mr-2 mt-1 text-gray-300 text-xs">●</div>
-                  <div>
-                    Efficiently managed logistics using electric three-wheelers
-                    for timely and eco-friendly deliveries.
-                  </div>
-                </div>
-                <div class="flex">
-                  <div class="mr-2 mt-1 text-gray-300 text-xs">●</div>
-                  <div>
-                    Conducted market research to optimize product offerings and
-                    gained valuable experience in entrepreneurship, customer
-                    service, and supply chain management within a start-up
-                    environment.
                   </div>
                 </div>
               </div>
